JSAI/error/src/test/resources/init/ke-stringmethods.js
x = String.fromCharCode(100, 101, 90)
print(x)

y = x.charCodeAt(3)
print(y)

y = x.charAt(2)
print(y)

